// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LargeButton inverted 1`] = `
.c0 {
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 18px;
  padding-bottom: 18px;
  background-color: #e42d42;
  color: #ffffff;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  font-family: inherit;
  font-weight: bold;
  line-height: 1.125;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: 0.1875s cubic-bezier(0.375,0,0.675,1) box-shadow;
  transition: 0.1875s cubic-bezier(0.375,0,0.675,1) box-shadow;
  box-shadow: 0 2px 4px rgba(0,0,0,0.125);
  border-radius: 9999px;
  border: none;
  background-color: #ffffff;
  color: #e42d42;
  text-transform: uppercase;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 6px rgba(0,0,0,0.125);
}

.c0:active {
  outline: 0;
  box-shadow: 0 2px 8px 2px rgba(0,0,0,0.125);
}

.c0:hover,
.c0:focus {
  box-shadow: 0 2px 12px 2px rgba(0,0,0,0.125);
}

.c0:active {
  box-shadow: 0 4px 16px 2px rgba(0,0,0,0.125);
}

<a
  className="c0"
  color="white"
  fontSize={3}
/>
`;

exports[`LargeButton larger 1`] = `
.c0 {
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 18px;
  padding-bottom: 18px;
  background-color: #7280ed;
  color: #ffffff;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  font-family: inherit;
  font-weight: bold;
  line-height: 1.125;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: 0.1875s cubic-bezier(0.375,0,0.675,1) box-shadow;
  transition: 0.1875s cubic-bezier(0.375,0,0.675,1) box-shadow;
  box-shadow: 0 2px 4px rgba(0,0,0,0.125);
  border-radius: 9999px;
  border: none;
  text-transform: uppercase;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 6px rgba(114,128,237,0.25);
}

.c0:active {
  outline: 0;
  box-shadow: 0 2px 8px 2px rgba(114,128,237,0.25);
}

.c0:hover,
.c0:focus {
  box-shadow: 0 2px 12px 2px rgba(114,128,237,0.25);
}

.c0:active {
  box-shadow: 0 4px 16px 2px rgba(114,128,237,0.25);
}

<a
  className="c0"
  color="white"
  fontSize={3}
/>
`;

exports[`LargeButton renders 1`] = `
.c0 {
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 18px;
  padding-bottom: 18px;
  background-color: #e42d42;
  color: #ffffff;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  font-family: inherit;
  font-weight: bold;
  line-height: 1.125;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: 0.1875s cubic-bezier(0.375,0,0.675,1) box-shadow;
  transition: 0.1875s cubic-bezier(0.375,0,0.675,1) box-shadow;
  box-shadow: 0 2px 4px rgba(0,0,0,0.125);
  border-radius: 9999px;
  border: none;
  text-transform: uppercase;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 6px rgba(228,45,66,0.25);
}

.c0:active {
  outline: 0;
  box-shadow: 0 2px 8px 2px rgba(228,45,66,0.25);
}

.c0:hover,
.c0:focus {
  box-shadow: 0 2px 12px 2px rgba(228,45,66,0.25);
}

.c0:active {
  box-shadow: 0 4px 16px 2px rgba(228,45,66,0.25);
}

<a
  className="c0"
  color="white"
  fontSize={3}
/>
`;
